# agentic-dci-workflow-hana-on-rhel

./: .containerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  FIX_LOOP_ARCHITECTURE.md  GETTING_STARTED.md  LICENSE  Makefile  PROJECT_INTRODUCTION.md  README.md  RUNBOOK.md  SETUP_GUIDE.md  SUMMARY.md  config_loader.py  pyproject.toml  relay-requirements.txt  requirements-dev.txt  requirements.txt  run_config.example.yml  secrets.example.yml
.claude/agents/: SUBAGENT_GUIDE.md  ansible-reviewer.md  dci-diagnostician.md  hana-expert.md  os-deploy-expert.md
agents/: __init__.py  agent.py  config.py  hooks.py  mcp_server.py  skill_api.py
container/: Containerfile  Containerfile.relay  dci-relay.service  entrypoint.sh  relay.sh  run.sh
infra/: setup_pubsub.sh
relay/: __main__.py  config.py  daemon.py  deploy.sh  handlers.py  safety.py  ssh_manager.py  start.sh
scripts/: configure_sap_clone.sh  diagnose.sh  install-hooks.sh  run-mcp-server.sh  test.sh
settings/: settings.example.yml
tests/: conftest.py  test_config.py  test_configure_target.py  test_events.py  test_filelock.py  test_fix_loop.py  test_hooks.py  test_integration.py  test_knowledge_base.py  test_mcp_server.py  test_onboarding.py  test_phase_expectations.py  test_pubsub_client.py  test_relay_daemon.py  test_relay_handlers.py  test_run_journal.py  test_safety.py  test_skill_api.py  test_usage_tracker.py  test_workflow_events.py
tools/: bootstrap.py  configure_target.py  ingest_human_fixes.py  sync_hooks.py  sync_settings.py  workflow_poller.py
(+26 files in other folders)
